# toasted-renderer

./: CMakeLists.txt  README.md  main.cpp
glm/ext/: matrix_transform.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Input.cpp  Input.h  camera.cpp  camera.h  input_system.cpp  input_system.h  path_helper.cpp  path_helper.h  render_window.cpp  render_window.h  shader.cpp  shader.h
src/components/: material.hpp  mesh.hpp  mesh_renderer.hpp  model.cpp  model.h
src/utils/: singleton.h
